@@ -1,3 +1,7 @@
+1999-04-29  Linus Nordberg  <linus@swox.se>
+
+	* findcl.c (main): Add option '-i' for interval factor.
+
 1999-04-28  Linus Nordberg  <linus@swox.se>
 
 	* statlib.c: Change debugging stuff.
